--- a/index7.html
+++ b/index7.html
@@ -137,7 +137,7 @@
     <section class="crop-status">
         <h3>Current Crop Status</h3>
         <div class="crop-card">
-            <img src="wheat.png" alt="Wheat Field">
+            <img src="Wheat.png" alt="Wheat Field">
             <div>
                 <h4>Wheat</h4>
                 <p>Growth Stage: Flowering</p>
